# bees_assessment

./: LICENSE  README.md  requirements.txt  treatment.py
assets/: Data Engineer Challenge - Client Solutions.docx  background_mapping.csv  list_like_columns_map.json  project_1_background.csv  project_1_logs.csv  project_2_background.csv  project_2_logs.csv
assets/files_for_visualization/: background_mapping.csv  project_1_background.csv  project_1_logs.csv  project_2_background.csv  project_2_logs.csv
task_1/: README.md  helpers.py  treatment.py
task_1/output/: background_dataset.csv  background_dataset.xlsx  logs_dataset.csv  logs_dataset.xlsx
task_2/: README.md  task_2.py
task_2/documentation/: task_2.html
task_2/documentation/sbees/: index.html  insecure.html  secure.html
task_2/package/: README.md  pyproject.toml
task_2/package/documentation/sbees_diego_soares/: index.html  insecure.html  secure.html
task_2/package/src/sbees/: insecure.py  secure.py
task_2/package/src/sbees_diego_soares/: insecure.py
task_2/package/test/: conftest.py
task_2/package/test/coverage/: .data  report.json
task_2/package/test/sbees/: test_insecure.py  test_secure.py
task_2/package/test/sbees/assets/: test_data.csv
task_3/: README.md  treatment_notebook.ipynb
task_3/output/: background_dataset.xlsx  logs_dataset.csv  logs_dataset.xlsx
