# Build and project settings
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sbees"
version = "1.0b1"
authors = [
  { name="Diego Soares", email="osoaresdiego@gmail.com" },
]
description = "Package of the Streetbees Data Engineer - technical assessment."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas==1.4.3",
    "pycountry==22.3.5",
]

[project.urls]
"Homepage" = "https://github.com/osdiego/bees_assessment"

# Unit tests settings
## Pytest
[tool.pytest.ini_options]
markers = "unittest: marks tests as unit tests"
addopts = "-v -m unittest -vv"

## Coverage
[tool.coverage.run]
command_line = "-m pytest"
data_file = "test/coverage/.data"
include = ["src/*"]
omit =[
    "*__init__.py",
    "test/conftest.py",
]
branch = true

[tool.coverage.report]
skip_empty = true
fail_under = 80
precision = 2

[tool.coverage.json]
output = "test/coverage/report.json"
pretty_print = true
